start of visual test

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -897,6 +897,9 @@ $(window).ready(function() {
 
             <h2 id="tooltip">Tooltip:</h2>
 
+            <iframe src="./tip-frame.html" style="height: 10rem;"></iframe>
+
+
             <p>
                 <button type="button" class="btn" title="Delayed Tooltip" data-cfw="tooltip" data-cfw-tooltip-delay=500>Delayed</button>
             </p>
