--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -325,6 +325,8 @@ Holder.addTheme("gray", {
 
 <h3>Code styles</h3>
 <p><code>code sample</code></p>
+<p><a href="#"><code>code inside a link</code></a></p>
+<p><code>code <a href="#">with a link</a> sample</p>
 <p><kbd>kdb sample</kbd></p>
 <p><kbd>nested <kbd>kbd</kbd> sample</kbd></p>
 <p><var>var sample</var></p>
