fix broken code test markup

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -326,7 +326,7 @@ Holder.addTheme("gray", {
 <h3>Code styles</h3>
 <p><code>code sample</code></p>
 <p><a href="#"><code>code inside a link</code></a></p>
-<p><code>code <a href="#">with a link</a> sample</p>
+<p><code>code <a href="#">with a link</a> sample</code></p>
 <p><kbd>kdb sample</kbd></p>
 <p><kbd>nested <kbd>kbd</kbd> sample</kbd></p>
 <p><var>var sample</var></p>
