--- a/test/visual/badge.html
+++ b/test/visual/badge.html
@@ -32,99 +32,58 @@
 <h2>Color</h2>
 <p>
     <span class="badge">Default</span>
-    <span class="badge badge-primary">Primary</span>
-    <span class="badge badge-secondary">Secondary</span>
-    <span class="badge badge-success">Success</span>
-    <span class="badge badge-info">Info</span>
-    <span class="badge badge-warning">Warning</span>
-    <span class="badge badge-danger">Danger</span>
-    <span class="badge badge-light">Light</span>
-    <span class="badge badge-dark">Dark</span>
+    <span class="badge bg-primary">Primary</span>
+    <span class="badge bg-secondary">Secondary</span>
+    <span class="badge bg-success">Success</span>
+    <span class="badge bg-info">Info</span>
+    <span class="badge bg-warning text-body">Warning</span>
+    <span class="badge bg-danger">Danger</span>
+    <span class="badge bg-light text-dark">Light</span>
+    <span class="badge bg-dark">Dark</span>
 </p>
 
 <h2>Outline</h2>
 <p>
-    <span class="badge badge-outline">Default</span>
-    <span class="badge badge-outline-primary">Primary</span>
-    <span class="badge badge-outline-secondary">Secondary</span>
-    <span class="badge badge-outline-success">Success</span>
-    <span class="badge badge-outline-info">Info</span>
-    <span class="badge badge-outline-warning">Warning</span>
-    <span class="badge badge-outline-danger">Danger</span>
-    <span class="badge badge-outline-light">Light</span>
-    <span class="badge badge-outline-dark">Dark</span>
-</p>
-
-<h2>Anchor</h2>
-<p>
-    <a href="#" class="badge">Default</a>
-    <a href="#" class="badge badge-primary">Primary</a>
-    <a href="#" class="badge badge-secondary">Secondary</a>
-    <a href="#" class="badge badge-success">Success</a>
-    <a href="#" class="badge badge-info">Info</a>
-    <a href="#" class="badge badge-warning">Warning</a>
-    <a href="#" class="badge badge-danger">Danger</a>
-    <a href="#" class="badge badge-light">Light</a>
-    <a href="#" class="badge badge-dark">Dark</a>
-</p>
-
-<h2>Outline Anchor</h2>
-<p>
-    <a href="#" class="badge badge-outline">Default</a>
-    <a href="#" class="badge badge-outline-primary">Primary</a>
-    <a href="#" class="badge badge-outline-secondary">Secondary</a>
-    <a href="#" class="badge badge-outline-success">Success</a>
-    <a href="#" class="badge badge-outline-info">Info</a>
-    <a href="#" class="badge badge-outline-warning">Warning</a>
-    <a href="#" class="badge badge-outline-danger">Danger</a>
-    <a href="#" class="badge badge-outline-light">Light</a>
-    <a href="#" class="badge badge-outline-dark">Dark</a>
+    <span class="badge bg-transparent border-primary text-primary">Primary</span>
+    <span class="badge bg-transparent border-secondary text-secondary">Secondary</span>
+    <span class="badge bg-transparent border-success text-success">Success</span>
+    <span class="badge bg-transparent border-info text-info">Info</span>
+    <span class="badge bg-transparent border-warning text-warning">Warning</span>
+    <span class="badge bg-transparent border-danger text-danger">Danger</span>
+    <span class="badge bg-transparent border-light text-light">Light</span>
+    <span class="badge bg-transparent border-dark text-dark">Dark</span>
 </p>
 
 <h2>Pill</h2>
 <p>
-    <span class="badge badge-pill">Default</span>
-    <span class="badge badge-pill badge-primary">Primary</span>
-    <span class="badge badge-pill badge-secondary">Secondary</span>
-    <span class="badge badge-pill badge-success">Success</span>
-    <span class="badge badge-pill badge-info">Info</span>
-    <span class="badge badge-pill badge-warning">Warning</span>
-    <span class="badge badge-pill badge-danger">Danger</span>
-    <span class="badge badge-pill badge-light">Light</span>
-    <span class="badge badge-pill badge-dark">Dark</span>
+    <span class="badge radius-pill">Default</span>
+    <span class="badge radius-pill bg-primary">Primary</span>
+    <span class="badge radius-pill bg-secondary">Secondary</span>
+    <span class="badge radius-pill bg-success">Success</span>
+    <span class="badge radius-pill bg-info">Info</span>
+    <span class="badge radius-pill bg-warning text-body">Warning</span>
+    <span class="badge radius-pill bg-danger">Danger</span>
+    <span class="badge radius-pill bg-light text-dark">Light</span>
+    <span class="badge radius-pill bg-dark">Dark</span>
 </p>
 
 <h2>Dismissable</h2>
 <p>
-    <span class="badge badge-primary">
+    <span class="badge bg-primary">
         Dismissable badge
         <button type="button" class="close" aria-label="Dismiss">
             <span aria-hidden="true">&times;</span>
         </button>
     </span>
-    <a href="#" role="button" class="badge badge-secondary">
-        Dismissable anchor badge
-        <span class="close" aria-label="Dismiss">
-            <span aria-hidden="true">&times;</span>
-        </span>
-    </a>
-</p>
-<p>
-    <span class="badge badge-pill badge-warning">
+    <span class="badge radius-pill bg-success">
         Dismissable badge
         <button type="button" class="close" aria-label="Dismiss">
             <span aria-hidden="true">&times;</span>
         </button>
     </span>
-    <a href="#" role="button" class="badge badge-pill badge-success">
-        Dismissable anchor badge
-        <span class="close" aria-label="Dismiss">
-            <span aria-hidden="true">&times;</span>
-        </span>
-    </a>
 </p>
 <p>
-    <span class="badge badge-info" id="alert-badge">
+    <span class="badge bg-info" id="alert-badge">
         Dismissable badge
         <button type="button" class="close" aria-label="Dismiss" data-cfw-dismiss="alert" data-cfw-alert-target="#alert-badge">
             <span aria-hidden="true">&times;</span>
@@ -134,23 +93,23 @@
 
 <h2>Badge Group</h2>
 <div class="badge-group mb-1">
-    <span class="badge badge-dark">version</span>
-    <span class="badge badge-success">v4.0.0</span>
+    <span class="badge bg-dark">version</span>
+    <span class="badge bg-success">v4.0.0</span>
 </div>
 
 <div class="badge-group mb-1">
-    <span class="badge badge-dark">build</span>
-    <span class="badge badge-danger">error</span>
+    <span class="badge bg-dark">build</span>
+    <span class="badge bg-danger">error</span>
 </div>
 
 <div class="badge-group mb-1">
-    <span class="badge badge-dark">response</span>
-    <span class="badge badge-light">none</span>
+    <span class="badge radius-pill radius-e-0 bg-dark">response</span>
+    <span class="badge radius-pill radius-s-0 bg-light text-dark">none</span>
 </div>
 
 <div class="badge-group mb-1">
-    <span class="badge badge-primary">comments</span>
-    <span class="badge badge-outline-primary">9</span>
+    <span class="badge bg-primary">comments</span>
+    <span class="badge bg-transparent border-primary text-primary">9</span>
 </div>
 
 </div>
