--- a/test/visual/navbar.html
+++ b/test/visual/navbar.html
@@ -329,6 +329,41 @@
     </div>
 </nav>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light px-0">
+    <div class="container-fluid">
+        <a href="#" class="navbar-brand">Container</a>
+        <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarC0">
+            <span aria-hidden="true">&#8801;</span>
+        </button>
+
+        <div class="navbar-collapse collapse" id="navbarC0">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link disabled">Disabled</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
+                    <div class="dropdown-menu">
+                        <a href="#">Action</a>
+                        <a href="#">Another action</a>
+                        <a href="#">Something else here</a>
+                    </div>
+                </li>
+            </ul>
+            <form class="form-inline ms-auto">
+                <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-primary" type="submit">Search</button>
+            </form>
+        </div>
+    </div>
+</nav>
+
 <h2>Centered Navbars</h2>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
