shorten `.form-control-label` to `.form-control`

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -925,13 +925,13 @@ Showing a <kbd>kdb sample</kbd>
 <h3>Form using grid</h3>
 <form>
   <div class="form-group row">
-    <label for="inputEmail3" class="col-sm-2 form-control-label">Email</label>
+    <label for="inputEmail3" class="col-sm-2 form-label">Email</label>
     <div class="col-sm-10">
       <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
     </div>
   </div>
   <div class="form-group row">
-    <label for="inputPassword3" class="col-sm-2 form-control-label">Password</label>
+    <label for="inputPassword3" class="col-sm-2 form-label">Password</label>
     <div class="col-sm-10">
       <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
     </div>
@@ -1103,13 +1103,13 @@ Showing a <kbd>kdb sample</kbd>
 <h3>Static controls</h3>
 <form>
   <div class="form-group row">
-    <label for="inputEmail" class="col-sm-2 form-control-label">Email</label>
+    <label for="inputEmail" class="col-sm-2 form-label">Email</label>
     <div class="col-sm-10">
       <input type="text" readonly class="form-control-static" id="inputEmail" value="email@example.com">
     </div>
   </div>
   <div class="form-group row">
-    <label for="inputPassword" class="col-sm-2 form-control-label">Password</label>
+    <label for="inputPassword" class="col-sm-2 form-label">Password</label>
     <div class="col-sm-10">
       <input type="password" class="form-control" id="inputPassword" placeholder="Password">
     </div>
@@ -1294,15 +1294,15 @@ Showing a <kbd>kdb sample</kbd>
 
 <h3>Form validation</h3>
 <div class="form-group has-success">
-  <label class="form-control-label" for="inputSuccess1">Input with success</label>
+  <label class="form-label" for="inputSuccess1">Input with success</label>
   <input type="text" class="form-control form-control-icon" id="inputSuccess1">
 </div>
 <div class="form-group has-warning">
-  <label class="form-control-label" for="inputWarning1">Input with warning</label>
+  <label class="form-label" for="inputWarning1">Input with warning</label>
   <input type="text" class="form-control form-control-icon" id="inputWarning1">
 </div>
 <div class="form-group has-danger">
-  <label class="form-control-label" for="inputDanger1">Input with danger</label>
+  <label class="form-label" for="inputDanger1">Input with danger</label>
   <input type="text" class="form-control form-control-icon" id="inputDanger1">
 </div>
 
@@ -1326,7 +1326,7 @@ Showing a <kbd>kdb sample</kbd>
 </div>
 
 <div class="form-group row has-success">
-  <label for="inputHorizontalSuccess" class="col-sm-2 form-control-label">Email</label>
+  <label for="inputHorizontalSuccess" class="col-sm-2 form-label">Email</label>
   <div class="col-sm-10">
     <input type="email" class="form-control form-control-success" id="inputHorizontalSuccess" placeholder="name@example.com">
     <div class="form-control-feedback">Success! You've done it.</div>
@@ -1334,7 +1334,7 @@ Showing a <kbd>kdb sample</kbd>
   </div>
 </div>
 <div class="form-group row has-warning">
-  <label for="inputHorizontalWarning" class="col-sm-2 form-control-label">Email</label>
+  <label for="inputHorizontalWarning" class="col-sm-2 form-label">Email</label>
   <div class="col-sm-10">
     <input type="email" class="form-control form-control-warning" id="inputHorizontalWarning" placeholder="name@example.com">
     <div class="form-control-feedback">Shucks, check the formatting of that and try again.</div>
@@ -1342,7 +1342,7 @@ Showing a <kbd>kdb sample</kbd>
   </div>
 </div>
 <div class="form-group row has-danger">
-  <label for="inputHorizontalDnger" class="col-sm-2 form-control-label">Email</label>
+  <label for="inputHorizontalDnger" class="col-sm-2 form-label">Email</label>
   <div class="col-sm-10">
     <input type="email" class="form-control form-control-danger" id="inputHorizontalDnger" placeholder="name@example.com">
     <div class="form-control-feedback">Sorry, that username's taken. Try another?</div>
@@ -1352,15 +1352,15 @@ Showing a <kbd>kdb sample</kbd>
 
 <h3>Form validation - native for reference (colors not Figuration controlled)</h3>
 <div class="form-group">
-  <label class="form-control-label" for="inputNative0">Name</label>
+  <label class="form-label" for="inputNative0">Name</label>
   <input type="text" required class="form-control" id="inputNative0" placeholder="Name" />
 </div>
 <div class="form-group">
-  <label class="form-control-label" for="inputNative1">Email</label>
+  <label class="form-label" for="inputNative1">Email</label>
   <input type="email" required class="form-control" id="inputNative1" placeholder="Email"/>
 </div>
 <div class="form-group">
-  <label class="form-control-label" for="inputNative2">URL</label>
+  <label class="form-label" for="inputNative2">URL</label>
   <input type="url" class="form-control" id="inputNative2" placeholder="http://">
 </div>
 
