--- a/test/visual/form-inline.html
+++ b/test/visual/form-inline.html
@@ -21,11 +21,11 @@
 
     <form class="form-inline mb-1">
         <div class="form-group mb-0_5 me-sm-0_5 mb-sm-0">
-            <label for="inlineName0" class="form-control-label me-sm-0_5">Name</label>
+            <label for="inlineName0" class="form-label me-sm-0_5">Name</label>
             <input type="text" class="form-control" id="inlineName0" placeholder="Jane Doe">
         </div>
         <div class="form-group mb-0_5 me-sm-0_5 mb-sm-0">
-            <label for="inlineEmail0" class="form-control-label me-sm-0_5">Email</label>
+            <label for="inlineEmail0" class="form-label me-sm-0_5">Email</label>
             <input type="email" class="form-control" id="inlineEmail0" placeholder="jane.doe@example.com">
         </div>
         <button type="submit" class="btn btn-primary">Send invitation</button>
