place validation icon on left for select with size of multple attributes

--- a/test/visual/form.html
+++ b/test/visual/form.html
@@ -399,6 +399,18 @@
         <div id="vfb-sel-4" class="valid-feedback">Example valid custom select feedback</div>
     </div>
     <div class="form-group">
+        <select class="form-control has-validation-icon" aria-describedby="ifb-sel-5 vfb-sel-5" size="3" required>
+            <option value="">Default select</option>
+            <option value="1">one</option>
+            <option value="2">two</option>
+            <option value="3">three</option>
+            <option value="4">four</option>
+            <option value="5">five</option>
+        </select>
+        <div id="ifb-sel-5" class="invalid-feedback">Example invalid custom select feedback</div>
+        <div id="vfb-sel-5" class="valid-feedback">Example valid custom select feedback</div>
+    </div>
+    <div class="form-group">
         <button class="btn btn-primary" type="submit">Submit form</button>
     </div>
 </form>
