--- a/test/visual/custom-range.html
+++ b/test/visual/custom-range.html
@@ -26,24 +26,24 @@
 </div>
 <div class="mb-1">
     <label for="customRange1">Example range</label>
-    <input type="range" class="custom-range" id="customRange1">
+    <input type="range" class="form-range" id="customRange1">
 </div>
 <div class="mb-1">
     <label for="customRange2">Example range - range 0-5</label>
-    <input type="range" class="custom-range" min="0" max="5" value="1" id="customRange2">
+    <input type="range" class="form-range" min="0" max="5" value="1" id="customRange2">
 </div>
 <div class="mb-1">
     <label for="customRange3">Example range - range 0-5 + step 0.5</label>
-    <input type="range" class="custom-range" min="0" max="5" step="0.5" value="2.5" id="customRange3">
+    <input type="range" class="form-range" min="0" max="5" step="0.5" value="2.5" id="customRange3">
 </div>
 <div class="mb-1">
     <label for="customRange4">Disabled</label>
-    <input type="range" class="custom-range" id="customRange4" disabled>
+    <input type="range" class="form-range" id="customRange4" disabled>
 </div>
 <div class="for-group form-row">
     <label for="customRange5" class="col-sm-2 mb-0">Example range</label>
     <div class="col-sm-10">
-        <input type="range" class="custom-range" id="customRange5">
+        <input type="range" class="form-range" id="customRange5">
     </div>
 </div>
 
