--- a/test/dev/player.html
+++ b/test/dev/player.html
@@ -461,7 +461,7 @@ body {
         <span class="player-time" data-cfw-player="time">
             <span class="player-time-current" data-cfw-player="time-current"></span>
             <span class="player-seek" data-cfw-player="seek">
-                <input type="range" class="custom-range" aria-label="Seek">
+                <input type="range" class="form-range" aria-label="Seek">
             </span>
             <span class="player-time-duration" data-cfw-player="time-duration"></span>
         </span>
@@ -470,7 +470,7 @@ body {
             <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
         </span>
         <span class="player-volume" data-cfw-player="volume">
-            <input type="range" class="custom-range" aria-label="Volume">
+            <input type="range" class="form-range" aria-label="Volume">
         </span>
         <button type="button" class="btn btn-icon" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fas fa-fw fa-redo"></span></button>
     </div>
@@ -502,7 +502,7 @@ body {
             <span class="player-time" data-cfw-player="time">
                 <span class="player-time-current" data-cfw-player="time-current"></span>
                 <span class="player-seek" data-cfw-player="seek">
-                	<input type="range" class="custom-range" aria-label="Seek">
+                	<input type="range" class="form-range" aria-label="Seek">
                 </span>
                 <span class="player-time-duration" data-cfw-player="time-duration"></span>
             </span>
@@ -511,7 +511,7 @@ body {
                 <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
             </span>
             <span class="player-volume" data-cfw-player="volume">
-                <input type="range" class="custom-range" aria-label="Volume">
+                <input type="range" class="form-range" aria-label="Volume">
             </span>
             <div class="dropup dropleft" style="display: inline-block; position: relative;">
                 <button type="button" class="btn btn-icon player-speed" data-cfw="dropdown" data-cfw-dropdown-target="#speed0" title="Playback speed" aria-label="Playback speed"><span class="fas fa-fw fa-sort"></span></button>
@@ -554,7 +554,7 @@ body {
             <span class="player-time" data-cfw-player="time">
                 <span class="player-time-current" data-cfw-player="time-current"></span>
                 <span class="player-seek" data-cfw-player="seek">
-                	<input type="range" class="custom-range" aria-label="Seek">
+                	<input type="range" class="form-range" aria-label="Seek">
                 </span>
                 <span class="player-time-duration" data-cfw-player="time-duration"></span>
             </span>
@@ -564,7 +564,7 @@ body {
                 <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
             </span>
             <span class="player-volume" data-cfw-player="volume">
-                <input type="range" class="custom-range" aria-label="Volume">
+                <input type="range" class="form-range" aria-label="Volume">
             </span>
             <!-- <button type="button" class="btn btn-icon player-speed" data-cfw-player="speed" title="Playback speed" aria-label="Playback speed"><span class="fas fa-fw fa-sort"></span></button> -->
             <button type="button" class="btn btn-icon" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fas fa-fw fa-redo"></span></button>
@@ -599,7 +599,7 @@ body {
                 <span class="player-time" data-cfw-player="time">
                     <span class="player-time-current" data-cfw-player="time-current"></span>
                     <span class="player-seek" data-cfw-player="seek">
-                        <input type="range" class="custom-range" aria-label="Seek">
+                        <input type="range" class="form-range" aria-label="Seek">
                     </span>
                     <span class="player-time-duration" data-cfw-player="time-duration"></span>
                 </span>
@@ -609,7 +609,7 @@ body {
                     <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
                 </span>
                 <span class="player-volume" data-cfw-player="volume">
-                    <input type="range" class="custom-range" aria-label="Volume">
+                    <input type="range" class="form-range" aria-label="Volume">
                 </span>
                 <button type="button" class="btn btn-icon" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fas fa-fw fa-redo"></span></button>
                 <button type="button" class="btn btn-icon" data-cfw-player="caption" title="Closed Captions" aria-label="Closed Captions"><span class="fas fa-fw fa-closed-captioning"></span></button>
@@ -643,7 +643,7 @@ body {
                 <span class="player-time" data-cfw-player="time">
                     <span class="player-time-current" data-cfw-player="time-current"></span>
                     <span class="player-seek" data-cfw-player="seek">
-                    	<input type="range" class="custom-range" aria-label="Seek">
+                    	<input type="range" class="form-range" aria-label="Seek">
                     </span>
                     <span class="player-time-duration" data-cfw-player="time-duration"></span>
                 </span>
@@ -652,7 +652,7 @@ body {
                     <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
                 </span>
                 <span class="player-volume" data-cfw-player="volume">
-                    <input type="range" class="custom-range" aria-label="Volume">
+                    <input type="range" class="form-range" aria-label="Volume">
                 </span>
                 <button type="button" class="btn btn-icon" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fas fa-fw fa-redo"></span></button>
                 <button type="button" class="btn btn-icon" data-cfw-player="caption" title="Closed Captions" aria-label="Closed Captions"><span class="fas fa-fw fa-closed-captioning"></span></button>
@@ -688,7 +688,7 @@ body {
                 <span class="player-time" data-cfw-player="time">
                     <span class="player-time-current" data-cfw-player="time-current"></span>
                     <span class="player-seek" data-cfw-player="seek">
-                    	<input type="range" class="custom-range" aria-label="Seek">
+                    	<input type="range" class="form-range" aria-label="Seek">
                     </span>
                     <span class="player-time-duration" data-cfw-player="time-duration"></span>
                 </span>
@@ -698,7 +698,7 @@ body {
                     <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
                 </span>
                 <span class="player-volume" data-cfw-player="volume">
-                    <input type="range" class="custom-range" aria-label="Volume">
+                    <input type="range" class="form-range" aria-label="Volume">
                 </span>
                 <button type="button" class="btn btn-icon" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fas fa-fw fa-redo"></span></button>
                 <button type="button" class="btn btn-icon" data-cfw-player="caption" title="Closed Captions" aria-label="Closed Captions"><span class="fas fa-fw fa-closed-captioning"></span></button>
@@ -734,7 +734,7 @@ body {
                 <span class="player-time" data-cfw-player="time">
                     <span class="player-time-current" data-cfw-player="time-current"></span>
                     <span class="player-seek" data-cfw-player="seek">
-                    	<input type="range" class="custom-range" aria-label="Seek">
+                    	<input type="range" class="form-range" aria-label="Seek">
                     </span>
                     <span class="player-time-duration" data-cfw-player="time-duration"></span>
                 </span>
@@ -744,7 +744,7 @@ body {
                     <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
                 </span>
                 <span class="player-volume" data-cfw-player="volume">
-                    <input type="range" class="custom-range" aria-label="Volume">
+                    <input type="range" class="form-range" aria-label="Volume">
                 </span>
                 <button type="button" class="btn btn-icon" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fas fa-fw fa-redo"></span></button>
                 <button type="button" class="btn btn-icon" data-cfw-player="caption" title="Closed Captions" aria-label="Closed Captions"><span class="fas fa-fw fa-closed-captioning"></span></button>
@@ -789,7 +789,7 @@ body {
                 <span class="player-time" data-cfw-player="time">
                     <span class="player-time-current" data-cfw-player="time-current"></span>
                     <span class="player-seek" data-cfw-player="seek">
-                    	<input type="range" class="custom-range" aria-label="Seek">
+                    	<input type="range" class="form-range" aria-label="Seek">
                     </span>
                     <span class="player-time-duration" data-cfw-player="time-duration"></span>
                 </span>
@@ -798,7 +798,7 @@ body {
                     <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
                 </span>
                 <span class="player-volume" data-cfw-player="volume">
-                    <input type="range" class="custom-range" aria-label="Volume">
+                    <input type="range" class="form-range" aria-label="Volume">
                 </span>
                 <button type="button" class="btn btn-icon" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fas fa-fw fa-redo"></span></button>
                 <button type="button" class="btn btn-icon" data-cfw-player="caption" title="Closed Captions" aria-label="Closed Captions"><span class="fas fa-fw fa-closed-captioning"></span></button>
@@ -835,7 +835,7 @@ body {
                 <span class="player-time" data-cfw-player="time">
                     <span class="player-time-current" data-cfw-player="time-current"></span>
                     <span class="player-seek" data-cfw-player="seek">
-                    	<input type="range" class="custom-range" aria-label="Seek">
+                    	<input type="range" class="form-range" aria-label="Seek">
                     </span>
                     <span class="player-time-duration" data-cfw-player="time-duration"></span>
                 </span>
@@ -845,7 +845,7 @@ body {
                     <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
                 </span>
                 <span class="player-volume" data-cfw-player="volume">
-                    <input type="range" class="custom-range" aria-label="Volume">
+                    <input type="range" class="form-range" aria-label="Volume">
                 </span>
                 <button type="button" class="btn btn-icon" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fas fa-fw fa-redo"></span></button>
                 <button type="button" class="btn btn-icon" data-cfw-player="caption" title="Closed Captions" aria-label="Closed Captions"><span class="fas fa-fw fa-closed-captioning"></span></button>
@@ -878,7 +878,7 @@ body {
             <span class="player-time me-0_25" data-cfw-player="time">
                 <span class="player-time-current" data-cfw-player="time-current"></span>
                 <span class="player-seek form-inline" data-cfw-player="seek">
-                	<input type="range" class="custom-range" aria-label="Seek">
+                	<input type="range" class="form-range" aria-label="Seek">
                 </span>
                 <span class="player-time-duration" data-cfw-player="time-duration"></span>
             </span>
@@ -888,7 +888,7 @@ body {
                 <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
             </span>
             <span class="player-volume form-inline me-0_25" data-cfw-player="volume">
-                <input type="range" class="custom-range" aria-label="Volume">
+                <input type="range" class="form-range" aria-label="Volume">
             </span>
             <button type="button" class="btn btn-icon me-0_25" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fas fa-fw fa-redo"></span></button>
             <button type="button" class="btn btn-icon me-0_25" data-cfw-player="caption" title="Closed Captions" aria-label="Closed Captions"><span class="fas fa-fw fa-closed-captioning"></span></button>
