--- a/test/visual/form.html
+++ b/test/visual/form.html
@@ -66,12 +66,12 @@
     </div>
     <div class="form-group">
         <label for="exampleInputFile">File input</label>
-        <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
+        <input type="file" id="exampleInputFile" aria-describedby="fileHelp">
         <small id="fileHelp" class="form-text text-muted">This is some placeholder block-level help text for the above input. It's a bit lighter and easily wraps to a new line.</small>
     </div>
     <div class="form-group">
         <label for="exampleInputColor">Color input</label>
-        <input type="color" class="form-control-color" value="#117dba" id="exampleInputColor">
+        <input type="color" value="#117dba" id="exampleInputColor">
     </div>
     <fieldset class="form-group">
         <legend>Radio buttons</legend>
@@ -106,7 +106,7 @@
     </div>
     <div class="form-group">
         <label for="formControlRange">Example Range input</label>
-        <input type="range" class="form-control-range" id="formControlRange">
+        <input type="range" id="formControlRange">
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Submit</button>
@@ -479,15 +479,15 @@
 </div>
 <div class="row mb-1">
     <div class="col">
-        <div class="p-0_5"><div class="custom-file"><input type="file" class="custom-file-input" id="customFile0"><label class="custom-file-label" for="customFile0">Choose file...</label></div></div>
-        <div class="p-0_5 bg-primary"><div class="custom-file"><input type="file" class="custom-file-input" id="customFile1"><label class="custom-file-label" for="customFile1">Choose file...</label></div></div>
-        <div class="p-0_5 bg-secondary"><div class="custom-file"><input type="file" class="custom-file-input" id="customFile2"><label class="custom-file-label" for="customFile2">Choose file...</label></div></div>
-        <div class="p-0_5 bg-success"><div class="custom-file"><input type="file" class="custom-file-input" id="customFile3"><label class="custom-file-label" for="customFile3">Choose file...</label></div></div>
-        <div class="p-0_5 bg-info"><div class="custom-file"><input type="file" class="custom-file-input" id="customFile4"><label class="custom-file-label" for="customFile4">Choose file...</label></div></div>
-        <div class="p-0_5 bg-warning"><div class="custom-file"><input type="file" class="custom-file-input" id="customFile5"><label class="custom-file-label" for="customFile5">Choose file...</label></div></div>
-        <div class="p-0_5 bg-danger"><div class="custom-file"><input type="file" class="custom-file-input" id="customFile6"><label class="custom-file-label" for="customFile6">Choose file...</label></div></div>
-        <div class="p-0_5 bg-light"><div class="custom-file"><input type="file" class="custom-file-input" id="customFile7"><label class="custom-file-label" for="customFile7">Choose file...</label></div></div>
-        <div class="p-0_5 bg-dark"><div class="custom-file"><input type="file" class="custom-file-input" id="customFile8"><label class="custom-file-label" for="customFile8">Choose file...</label></div></div>
+        <div class="p-0_5"><div class="form-file"><input type="file" class="form-file-input" id="customFile0"><label class="form-file-label" for="customFile0"><span class="form-file-text">Choose file...</span><span class="form-file-button">Browse</span></label></div></div>
+        <div class="p-0_5 bg-primary"><div class="form-file"><input type="file" class="form-file-input" id="customFile1"><label class="form-file-label" for="customFile1"><span class="form-file-text">Choose file...</span><span class="form-file-button">Browse</span></label></div></div>
+        <div class="p-0_5 bg-secondary"><div class="form-file"><input type="file" class="form-file-input" id="customFile2"><label class="form-file-label" for="customFile2"><span class="form-file-text">Choose file...</span><span class="form-file-button">Browse</span></label></div></div>
+        <div class="p-0_5 bg-success"><div class="form-file"><input type="file" class="form-file-input" id="customFile3"><label class="form-file-label" for="customFile3"><span class="form-file-text">Choose file...</span><span class="form-file-button">Browse</span></label></div></div>
+        <div class="p-0_5 bg-info"><div class="form-file"><input type="file" class="form-file-input" id="customFile4"><label class="form-file-label" for="customFile4"><span class="form-file-text">Choose file...</span><span class="form-file-button">Browse</span></label></div></div>
+        <div class="p-0_5 bg-warning"><div class="form-file"><input type="file" class="form-file-input" id="customFile5"><label class="form-file-label" for="customFile5"><span class="form-file-text">Choose file...</span><span class="form-file-button">Browse</span></label></div></div>
+        <div class="p-0_5 bg-danger"><div class="form-file"><input type="file" class="form-file-input" id="customFile6"><label class="form-file-label" for="customFile6"><span class="form-file-text">Choose file...</span><span class="form-file-button">Browse</span></label></div></div>
+        <div class="p-0_5 bg-light"><div class="form-file"><input type="file" class="form-file-input" id="customFile7"><label class="form-file-label" for="customFile7"><span class="form-file-text">Choose file...</span><span class="form-file-button">Browse</span></label></div></div>
+        <div class="p-0_5 bg-dark"><div class="form-file"><input type="file" class="form-file-input" id="customFile8"><label class="form-file-label" for="customFile8"><span class="form-file-text">Choose file...</span><span class="form-file-button">Browse</span></label></div></div>
     </div>
     <div class="col">
         <div class="p-0_5"><div class="input-group"><div class="input-group-addon"><div class="input-group-text" id="color-addon0">@</div></div><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-addon"><button class="btn" type="button">Button</button></span></div></div>
