--- a/test/visual/input-group.html
+++ b/test/visual/input-group.html
@@ -740,16 +740,22 @@
   <div class="input-group-addon">
     <div class="input-group-text">Upload</div>
   </div>
-  <div class="custom-file">
-    <input type="file" class="custom-file-input" id="custom-file-1">
-    <label class="custom-file-label" for="custom-file-1">Choose file...</label>
+  <div class="form-file">
+    <input type="file" class="form-file-input" id="form-file-1">
+    <label class="form-file-label" for="form-file-1">
+        <span class="form-file-text">Choose file...</span>
+        <span class="form-file-button">Browse</span>
+    </label>
   </div>
 </div>
 
 <div class="input-group">
-  <div class="custom-file">
-    <input type="file" class="custom-file-input" id="custom-file-2">
-    <label class="custom-file-label" for="custom-file-2">Choose file...</label>
+  <div class="form-file">
+    <input type="file" class="form-file-input" id="form-file-2">
+    <label class="form-file-label" for="form-file-2">
+        <span class="form-file-text">Choose file...</span>
+        <span class="form-file-button">Browse</span>
+    </label>
   </div>
   <div class="input-group-addon">
     <div class="input-group-text">Upload</div>
@@ -760,16 +766,22 @@
   <div class="input-group-addon">
     <button class="btn btn-outline-secondary" type="button">Button</button>
   </div>
-  <div class="custom-file">
-    <input type="file" class="custom-file-input" id="custom-file-3">
-    <label class="custom-file-label" for="custom-file-3">Choose file...</label>
+  <div class="form-file">
+    <input type="file" class="form-file-input" id="form-file-3">
+    <label class="form-file-label" for="form-file-3">
+        <span class="form-file-text">Choose file...</span>
+        <span class="form-file-button">Browse</span>
+    </label>
   </div>
 </div>
 
 <div class="input-group">
-  <div class="custom-file">
-    <input type="file" class="custom-file-input" id="custom-file-4">
-    <label class="custom-file-label" for="custom-file-4">Choose file...</label>
+  <div class="form-file">
+    <input type="file" class="form-file-input" id="form-file-4">
+    <label class="form-file-label" for="form-file-4">
+        <span class="form-file-text">Choose file...</span>
+        <span class="form-file-button">Browse</span>
+    </label>
   </div>
   <div class="input-group-addon">
     <button class="btn btn-outline-secondary" type="button">Button</button>
@@ -966,25 +978,34 @@
 
 <div class="input-group">
     <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
-    <div class="custom-file">
-        <input type="file" class="custom-file-input is-invalid" id="validateFile1">
-        <label class="custom-file-label" for="validateFile1">Choose file...</label>
+    <div class="form-file">
+      <input type="file" class="form-file-input is-invalid" id="validate-file-1">
+      <label class="form-file-label" for="validate-file-1">
+        <span class="form-file-text">Choose file...</span>
+        <span class="form-file-button">Browse</span>
+      </label>
     </div>
 </div>
 
 <div class="input-group">
-    <div class="custom-file">
-        <input type="file" class="custom-file-input is-invalid" id="validateFile2">
-        <label class="custom-file-label" for="validateFile2">Choose file...</label>
+    <div class="form-file">
+      <input type="file" class="form-file-input is-invalid" id="validate-file-2">
+      <label class="form-file-label" for="validate-file-2">
+        <span class="form-file-text">Choose file...</span>
+        <span class="form-file-button">Browse</span>
+      </label>
     </div>
     <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
 </div>
 
 <div class="input-group">
     <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
-    <div class="custom-file">
-        <input type="file" class="custom-file-input is-invalid" id="validateFile3">
-        <label class="custom-file-label" for="validateFile3">Choose file...</label>
+    <div class="form-file">
+      <input type="file" class="form-file-input is-invalid" id="validate-file-3">
+      <label class="form-file-label" for="validate-file-3">
+        <span class="form-file-text">Choose file...</span>
+        <span class="form-file-button">Browse</span>
+      </label>
     </div>
     <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
 </div>
