--- a/test/visual/form-validation.html
+++ b/test/visual/form-validation.html
@@ -106,9 +106,12 @@
         </div>
     </div>
     <div class="form-group">
-        <div class="custom-file">
-            <input type="file" class="custom-file-input" id="validateFile1" required>
-            <label class="custom-file-label" for="validateFile1">Choose file...</label>
+        <div class="form-file">
+            <input type="file" class="form-file-input" id="validateFile1" required>
+            <label class="form-file-label" for="validateFile1">
+                <span class="form-file-text">Choose file...</span>
+                <span class="form-file-button">Browse</span>
+            </label>
             <div class="invalid-feedback">Example invalid feedback.</div>
         </div>
     </div>
@@ -187,9 +190,12 @@
         </div>
     </div>
     <div class="form-group">
-        <div class="custom-file">
-            <input type="file" class="custom-file-input is-invalid" id="validateFile2">
-            <label class="custom-file-label" for="validateFile2">Choose file...</label>
+        <div class="form-file">
+            <input type="file" class="form-file-input is-invalid" id="validateFile2" required>
+            <label class="form-file-label" for="validateFile2">
+                <span class="form-file-text">Choose file...</span>
+                <span class="form-file-button">Browse</span>
+            </label>
             <div class="invalid-feedback">Example invalid feedback.</div>
         </div>
     </div>
@@ -244,10 +250,15 @@
         </select>
         <div class="invalid-feedback">Example invalid custom select feedback</div>
     </div>
-    <div class="custom-file">
-        <input type="file" class="custom-file-input" id="validatedCustomFile" required>
-        <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
-        <div class="invalid-feedback">Example invalid custom file feedback</div>
+    <div class="form-group">
+        <div class="form-file">
+            <input type="file" class="form-file-input is-invalid" id="validatedCustomFile" required>
+            <label class="form-file-label" for="validatedCustomFile">
+                <span class="form-file-text">Choose file...</span>
+                <span class="form-file-button">Browse</span>
+            </label>
+            <div class="invalid-feedback">Example invalid custom file feedback</div>
+        </div>
     </div>
 </form>
 
