more scss restructure, merge custom check/radio/switch, simplify validation

--- a/test/visual/form-range.html
+++ b/test/visual/form-range.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Figuration - Custom Range</title>
+<title>Figuration - Form Range</title>
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
@@ -16,7 +16,7 @@
 
 <div class="container">
 
-<h1>Custom Range</h1>
+<h1>Form Range</h1>
 
 <div class="mb-1">
     <div>
