--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1366,124 +1366,107 @@ Showing a <kbd>kdb sample</kbd>
 
 <h3>Custom Forms: Checkbox</h3>
 <div class="mb-1">
-  <div class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" id="customControl0">
-    <label class="custom-control-indicator" for="customControl0"></label>
-    <label class="custom-control-label" for="customControl0">Check this custom checkbox</label>
+  <div class="form-check form-checkradio">
+    <input type="checkbox" class="form-check-input" id="customControl0">
+    <label class="form-check-label" for="customControl0">Check this custom checkbox</label>
   </div>
 </div>
 
 <div class="mb-1">
-  <div class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" id="customControl1">
-    <label class="custom-control-indicator" for="customControl1"></label>
-    <label class="custom-control-label" for="customControl1">Curabitur vel pulvinar arcu? Donec commodo iaculis varius. In malesuada volutpat magna nec blandit. Quisque sit amet nisl scelerisque, tristique odio at, dignissim quam. Aenean molestie imperdiet nisi. Vestibulum mattis posuere dui a luctus. Cras suscipit urna et pulvinar dapibus. Cras efficitur aliquet mi ut cursus.</label>
+  <div class="form-check form-checkradio">
+    <input type="checkbox" class="form-check-input" id="customControl1">
+    <label class="form-check-label" for="customControl1">Curabitur vel pulvinar arcu? Donec commodo iaculis varius. In malesuada volutpat magna nec blandit. Quisque sit amet nisl scelerisque, tristique odio at, dignissim quam. Aenean molestie imperdiet nisi. Vestibulum mattis posuere dui a luctus. Cras suscipit urna et pulvinar dapibus. Cras efficitur aliquet mi ut cursus.</label>
   </div>
 </div>
 
 <h3>Custom Forms: Radio</h3>
 <div class="mb-1">
-  <div class="custom-control custom-radio">
-    <input name="radio" type="radio" class="custom-control-input" id="customControl2">
-    <label class="custom-control-indicator" for="customControl2"></label>
-    <label class="custom-control-label" for="customControl2">Toggle this custom radio</label>
+  <div class="form-check form-checkradio">
+    <input name="radio" type="radio" class="form-check-input" id="customControl2" checked>
+    <label class="form-check-label" for="customControl2">Toggle this custom radio</label>
   </div>
-  <div class="custom-control custom-radio">
-    <input name="radio" type="radio" class="custom-control-input" id="customControl3">
-    <label class="custom-control-indicator" for="customControl3"></label>
-    <label class="custom-control-label" for="customControl3">Or toggle this other custom radio</label>
+  <div class="form-check form-checkradio">
+    <input name="radio" type="radio" class="form-check-input" id="customControl3">
+    <label class="form-check-label" for="customControl3">Or toggle this other custom radio</label>
   </div>
 </div>
 
 <h3>Custom Forms: Switch</h3>
 <div class="mb-1">
-  <div class="custom-control custom-switch">
-    <input type="checkbox" class="custom-control-input" id="customSwitch0">
-    <label class="custom-control-indicator" for="customSwitch0"></label>
-    <label class="custom-control-label" for="customSwitch0">Toggle this custom switch</label>
+  <div class="form-check form-switch">
+    <input type="checkbox" class="form-check-input" id="customSwitch0">
+    <label class="form-check-label" for="customSwitch0">Toggle this custom switch</label>
   </div>
 </div>
 <div class="mb-1">
-  <div class="custom-control custom-switch">
-    <input type="radio" class="custom-control-input" name="customSwitch" id="customSwitch1" checked>
-    <label class="custom-control-indicator" for="customSwitch1"></label>
-    <label class="custom-control-label" for="customSwitch1">Toggle this custom radio switch</label>
+  <div class="form-check form-switch">
+    <input type="radio" class="form-check-input" name="customSwitch" id="customSwitch1" checked>
+    <label class="form-check-label" for="customSwitch1">Toggle this custom radio switch</label>
   </div>
-  <div class="custom-control custom-switch">
-    <input type="radio" class="custom-control-input" name="customSwitch" id="customSwitch2">
-    <label class="custom-control-indicator" for="customSwitch2"></label>
-    <label class="custom-control-label" for="customSwitch2">Toggle this custom radio switch</label>
+  <div class="form-check form-switch">
+    <input type="radio" class="form-check-input" name="customSwitch" id="customSwitch2">
+    <label class="form-check-label" for="customSwitch2">Toggle this custom radio switch</label>
   </div>
 </div>
 
 <h3>Custom Forms: Disabled</h3>
 <div class="mb-1">
-  <div class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" id="customControl4" disabled>
-    <label class="custom-control-indicator" for="customControl4"></label>
-    <label class="custom-control-label" for="customControl4">Check this custom checkbox</label>
+  <div class="form-check form-checkradio">
+    <input type="checkbox" class="form-check-input" id="customControl4" disabled>
+    <label class="form-check-label" for="customControl4">Check this custom checkbox</label>
   </div>
-  <div class="custom-control custom-radio">
-    <input name="radioDisabled0" type="radio" class="custom-control-input" id="customControl5" disabled>
-    <label class="custom-control-indicator" for="customControl5"></label>
-    <label class="custom-control-label" for="customControl5">Toggle this custom radio</label>
+  <div class="form-check form-checkradio">
+    <input name="radioDisabled0" type="radio" class="form-check-input" id="customControl5" disabled>
+    <label class="form-check-label" for="customControl5">Toggle this custom radio</label>
   </div>
 </div>
 <div class="mb-1">
-  <div class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" id="customControl6" checked disabled>
-    <label class="custom-control-indicator" for="customControl6"></label>
-    <label class="custom-control-label" for="customControl6">Check this custom checkbox</label>
+  <div class="form-check form-checkradio">
+    <input type="checkbox" class="form-check-input" id="customControl6" checked disabled>
+    <label class="form-check-label" for="customControl6">Check this custom checkbox</label>
   </div>
-  <div class="custom-control custom-radio">
-    <input name="radioDisabled1" type="radio" class="custom-control-input" id="customControl7" checked disabled>
-    <label class="custom-control-indicator" for="customControl7"></label>
-    <label class="custom-control-label" for="customControl7">Toggle this custom radio</label>
+  <div class="form-check form-checkradio">
+    <input name="radioDisabled1" type="radio" class="form-check-input" id="customControl7" checked disabled>
+    <label class="form-check-label" for="customControl7">Toggle this custom radio</label>
   </div>
 </div>
 <div class="mb-1">
-  <div class="custom-control custom-switch">
-    <input type="checkbox" class="custom-control-input" id="customControl8" disabled>
-    <label class="custom-control-indicator" for="customControl8"></label>
-    <label class="custom-control-label" for="customControl8">Toggle this custom switch</label>
+  <div class="form-check form-switch">
+    <input type="checkbox" class="form-check-input" id="customControl8" disabled>
+    <label class="form-check-label" for="customControl8">Toggle this custom switch</label>
   </div>
-  <div class="custom-control custom-switch">
-    <input type="checkbox" class="custom-control-input" id="customControl9" checked disabled>
-    <label class="custom-control-indicator" for="customControl9"></label>
-    <label class="custom-control-label" for="customControl9">Toggle this custom switch</label>
+  <div class="form-check form-switch">
+    <input type="checkbox" class="form-check-input" id="customControl9" checked disabled>
+    <label class="form-check-label" for="customControl9">Toggle this custom switch</label>
   </div>
 </div>
 
 <h3>Custom Forms: Inline</h3>
 <div class="mb-1">
-  <div class="custom-control custom-radio custom-control-inline">
-    <input id="customInline0" name="radio-stacked" type="radio" class="custom-control-input">
-    <label class="custom-control-indicator" for="customInline0"></label>
-    <label class="custom-control-label" for="customInline0">Toggle this custom radio</label>
+  <div class="form-check form-checkradio d-inline-block me-1">
+    <input id="customInline0" name="radio-inline" type="radio" class="form-check-input">
+    <label class="form-check-label" for="customInline0">Toggle this custom radio</label>
   </div>
-  <div class="custom-control custom-radio custom-control-inline">
-    <input id="customInline1" name="radio-stacked" type="radio" class="custom-control-input">
-    <label class="custom-control-indicator" for="customInline1"></label>
-    <label class="custom-control-label" for="customInline1">Or toggle this other custom radio</label>
+  <div class="form-check form-checkradio d-inline-block">
+    <input id="customInline1" name="radio-inline" type="radio" class="form-check-input">
+    <label class="form-check-label" for="customInline1">Or toggle this other custom radio</label>
   </div>
 </div>
 
 <div class=" mb-1">
-  <div class="custom-control custom-radio custom-control-inline">
-    <input id="customInline3" type="checkbox" class="custom-control-input">
-    <label class="custom-control-indicator" for="customInline3"></label>
-    <label class="custom-control-label" for="customInline3">Curabitur vel pulvinar arcu? Donec commodo iaculis varius. In malesuada volutpat magna nec blandit. Quisque sit amet nisl scelerisque, tristique odio at, dignissim quam. Aenean molestie imperdiet nisi. Vestibulum mattis posuere dui a luctus. Cras suscipit urna et pulvinar dapibus. Cras efficitur aliquet mi ut cursus.</label>
+  <div class="form-check form-checkradio d-inline-block me-1">
+    <input id="customInline3" type="checkbox" class="form-check-input">
+    <label class="form-check-label" for="customInline3">Curabitur vel pulvinar arcu? Donec commodo iaculis varius. In malesuada volutpat magna nec blandit. Quisque sit amet nisl scelerisque, tristique odio at, dignissim quam. Aenean molestie imperdiet nisi. Vestibulum mattis posuere dui a luctus. Cras suscipit urna et pulvinar dapibus. Cras efficitur aliquet mi ut cursus.</label>
   </div>
-  <div class="custom-control custom-radio custom-control-inline">
-    <input id="customInline4" type="checkbox" class="custom-control-input">
-    <label class="custom-control-indicator" for="customInline4"></label>
-    <label class="custom-control-label" for="customInline4">Curabitur vel pulvinar arcu? Donec commodo iaculis varius. In malesuada volutpat magna nec blandit. Quisque sit amet nisl scelerisque, tristique odio at, dignissim quam. Aenean molestie imperdiet nisi. Vestibulum mattis posuere dui a luctus. Cras suscipit urna et pulvinar dapibus. Cras efficitur aliquet mi ut cursus.</label>
+  <div class="form-check form-checkradio d-inline-block">
+    <input id="customInline4" type="checkbox" class="form-check-input">
+    <label class="form-check-label" for="customInline4">Curabitur vel pulvinar arcu? Donec commodo iaculis varius. In malesuada volutpat magna nec blandit. Quisque sit amet nisl scelerisque, tristique odio at, dignissim quam. Aenean molestie imperdiet nisi. Vestibulum mattis posuere dui a luctus. Cras suscipit urna et pulvinar dapibus. Cras efficitur aliquet mi ut cursus.</label>
   </div>
 </div>
 
 <h3>Custom Forms: Color Picker</h3>
 <div class="mb-1">
-  <input class="custom-color" type="color" value="#117dba" id="color">
+  <input class="form-color" type="color" value="#117dba" id="color">
 </div>
 
 <h3>Custom Forms: File Browser</h3>
