--- a/test/visual/form-inline.html
+++ b/test/visual/form-inline.html
@@ -77,10 +77,9 @@
             <option value="2">Two</option>
             <option value="3">Three</option>
         </select>
-        <div class="custom-control custom-checkbox mb-0_5 me-sm-0_5 mb-sm-0">
-            <input id="checkbox-1" class="custom-control-input" type="checkbox">
-            <label for="checkbox-1" class="custom-control-indicator"></label>
-            <label for="checkbox-1" class="custom-control-label">Remember my preference</label>
+        <div class="form-check form-checkradio mb-0_5 me-sm-0_5 mb-sm-0">
+            <input id="checkbox-1" class="form-check-input" type="checkbox">
+            <label for="checkbox-1" class="form-check-label">Remember my preference</label>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
