--- a/test/visual/form-validation.html
+++ b/test/visual/form-validation.html
@@ -218,27 +218,23 @@
         <textarea class="form-control is-invalid" id="validate-textarea" rows="3" placeholder="Required example textarea" required></textarea>
         <div class="invalid-feedback">Please enter a message in the textarea.</div>
     </div>
-    <div class="custom-control custom-switch mb-1">
-        <input type="checkbox" class="custom-control-input" id="customControlValidation0" required>
-        <label class="custom-control-indicator" for="customControlValidation0"></label>
-        <label class="custom-control-label" for="customControlValidation0">Check this custom checkbox</label>
+    <div class="form-check form-switch mb-1">
+        <input type="checkbox" class="form-check-input" id="customControlValidation0" required>
+        <label class="form-check-label" for="customControlValidation0">Check this custom checkbox</label>
         <div class="invalid-feedback">Example invalid feedback text</div>
     </div>
-    <div class="custom-control custom-checkbox mb-1">
-        <input type="checkbox" class="custom-control-input" id="customControlValidation1" required>
-        <label class="custom-control-indicator" for="customControlValidation1"></label>
-        <label class="custom-control-label" for="customControlValidation1">Check this custom checkbox</label>
+    <div class="form-check form-checkradio mb-1">
+        <input type="checkbox" class="form-check-input" id="customControlValidation1" required>
+        <label class="form-check-label" for="customControlValidation1">Check this custom checkbox</label>
         <div class="invalid-feedback">Example invalid feedback text</div>
     </div>
-    <div class="custom-control custom-radio">
-        <input type="radio" class="custom-control-input" id="customControlValidation2" name="radio-stacked" required>
-        <label class="custom-control-indicator" for="customControlValidation2"></label>
-        <label class="custom-control-label" for="customControlValidation2">Toggle this custom radio</label>
+    <div class="form-check form-checkradio">
+        <input type="radio" class="form-check-input" id="customControlValidation2" name="radio-stacked" required>
+        <label class="form-check-label" for="customControlValidation2">Toggle this custom radio</label>
     </div>
-    <div class="custom-control custom-radio mb-1">
-        <input type="radio" class="custom-control-input" id="customControlValidation3" name="radio-stacked" required>
-        <label class="custom-control-indicator" for="customControlValidation3"></label>
-        <label class="custom-control-label" for="customControlValidation3">Or toggle this other custom radio</label>
+    <div class="form-check form-checkradio mb-1">
+        <input type="radio" class="form-check-input" id="customControlValidation3" name="radio-stacked" required>
+        <label class="form-check-label" for="customControlValidation3">Or toggle this other custom radio</label>
         <div class="invalid-feedback">More example invalid feedback text</div>
     </div>
     <div class="form-group">
