update static form control

--- a/test/visual/form.html
+++ b/test/visual/form.html
@@ -126,7 +126,7 @@
     <div class="form-group row">
         <label for="inputEmail" class="col-sm-2 form-label">Email</label>
         <div class="col-sm-10">
-            <input type="text" readonly class="form-control form-control-static" id="inputEmail" value="email@example.com">
+            <input type="text" readonly class="form-control-static" id="inputEmail" value="email@example.com">
         </div>
     </div>
     <div class="form-group row">
@@ -140,7 +140,7 @@
 <form class="form-inline">
     <div class="form-group me-0_5">
         <label for="inputEmail2" class="sr-only">Email</label>
-        <input type="text" readonly class="form-control form-control-static" id="inputEmail2" value="email@example.com">
+        <input type="text" readonly class="form-control-static" id="inputEmail2" value="email@example.com">
     </div>
     <div class="form-group me-0_5">
         <label for="inputPassword2" class="sr-only">Password</label>
@@ -230,7 +230,7 @@
       </div>
       <fieldset class="form-group col-md-1">
         <label for="size0-2" class="sr-only">Example label</label>
-        <input type="text" class="form-control form-control-xsmall form-control-static" id="size0-2" value="Static">
+        <input type="text" class="form-control-static form-control-xsmall" id="size0-2" value="Static">
       </fieldset>
       <fieldset class="form-group col-md-3">
         <label for="size0-0" class="sr-only">Example label</label>
@@ -256,7 +256,7 @@
       </div>
       <fieldset class="form-group col-md-1">
         <label for="size1-2" class="sr-only">Example label</label>
-        <input type="text" class="form-control form-control-small form-control-static" id="size1-2" value="Static">
+        <input type="text" class="form-control-static form-control-small" id="size1-2" value="Static">
       </fieldset>
       <fieldset class="form-group col-md-3">
         <label for="size1-0" class="sr-only">Example label</label>
@@ -282,7 +282,7 @@
       </div>
       <fieldset class="form-group col-md-1">
         <label for="size2-2" class="sr-only">Example label</label>
-        <input type="text" class="form-control form-control-static" id="size2-2" value="Static">
+        <input type="text" class="form-control-static" id="size2-2" value="Static">
       </fieldset>
       <fieldset class="form-group col-md-3">
         <label for="size2-0" class="sr-only">Example label</label>
@@ -308,7 +308,7 @@
       </div>
       <fieldset class="form-group col-md-1">
         <label for="size3-2" class="sr-only">Example label</label>
-        <input type="text" class="form-control form-control-large form-control-static" id="size3-2" value="Static">
+        <input type="text" class="form-control-static form-control-large" id="size3-2" value="Static">
       </fieldset>
       <fieldset class="form-group col-md-3">
         <label for="size3-0" class="sr-only">Example label</label>
@@ -334,7 +334,7 @@
       </div>
       <fieldset class="form-group col-md-1">
         <label for="size4-2" class="sr-only">Example label</label>
-        <input type="text" class="form-control form-control-xlarge form-control-static" id="size4-2" value="Static">
+        <input type="text" class="form-control-static form-control-xlarge" id="size4-2" value="Static">
       </fieldset>
       <fieldset class="form-group col-md-3">
         <label for="size4-0" class="sr-only">Example label</label>
@@ -441,31 +441,31 @@
 <div class="form-group row">
     <label for="staticSize0" class="col-sm-2 form-label form-label-xsmall">Email</label>
     <div class="col-sm-10">
-        <input id="staticSize0" type="text" readonly class="form-control form-control-static form-control-xsmall" value="email@example.com">
+        <input id="staticSize0" type="text" readonly class="form-control-static form-control-xsmall" value="email@example.com">
     </div>
 </div>
 <div class="form-group row">
     <label for="staticSize1" class="col-sm-2 form-label form-label-small">Email</label>
     <div class="col-sm-10">
-        <input id="staticSize1" type="text" readonly class="form-control form-control-static form-control-small" value="email@example.com">
+        <input id="staticSize1" type="text" readonly class="form-control-static form-control-small" value="email@example.com">
     </div>
 </div>
 <div class="form-group row">
     <label for="staticSize2" class="col-sm-2 form-label">Email</label>
     <div class="col-sm-10">
-        <input id="staticSize2" type="text" readonly class="form-control form-control-static" value="email@example.com">
+        <input id="staticSize2" type="text" readonly class="form-control-static" value="email@example.com">
     </div>
 </div>
 <div class="form-group row">
     <label for="staticSize3" class="col-sm-2 form-label form-label-large">Email</label>
     <div class="col-sm-10">
-        <input id="staticSize3" type="text" readonly class="form-control form-control-static form-control-large" value="email@example.com">
+        <input id="staticSize3" type="text" readonly class="form-control-static form-control-large" value="email@example.com">
     </div>
 </div>
 <div class="form-group row">
     <label for="staticSize4" class="col-sm-2 form-label form-label-xlarge">Email</label>
     <div class="col-sm-10">
-        <input id="staticSize4" type="text" readonly class="form-control form-control-static form-control-xlarge" value="email@example.com">
+        <input id="staticSize4" type="text" readonly class="form-control-static form-control-xlarge" value="email@example.com">
     </div>
 </div>
 
